fix: make button and questionnaireProgress link more contrast on fover and focus

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -21,11 +21,11 @@
 }
 
 .Button:focus {
-  background-color: #f8f8f8;
+  background-color: #f5f5f5;
 }
 
 .Button:hover {
-  background-color: #f8f8f8;
+  background-color: #f5f5f5;
 }
 
 .Button:active {
