--- a/src/components/questionnaire-progress/questionnaire-progress.css
+++ b/src/components/questionnaire-progress/questionnaire-progress.css
@@ -27,11 +27,11 @@
 }
 
 .QuestionnaireProgress-link:focus {
-  background-color: #f8f8f8;
+  background-color: #f5f5f5;
 }
 
 .QuestionnaireProgress-link:hover {
-  background-color: #f8f8f8;
+  background-color: #f5f5f5;
 }
 
 .QuestionnaireProgress-link:active {
